--- a/server/public/testWHS2.html
+++ b/server/public/testWHS2.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" type="text/css" href="http://web.cs.ucdavis.edu/~amenta/s18/reset.css">
-<link rel="stylesheet" type="text/css" href="testWHS.css">
+<link rel="stylesheet" type="text/css" href="testWHS2.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> 
 </head>
 
@@ -33,7 +33,7 @@ Load a photo by number:
 </main>
 
 <!-- The Javascript for this page -->
-<script src="testWHS.js"> </script>
+<script src="testWHS2.js"> </script>
 
 </body>
 </html>
