--- a/server/public/testWHS2.html
+++ b/server/public/testWHS2.html
@@ -23,16 +23,18 @@ Load a photo by number:
 </p>
 
 <input id="num" placeholder="photo number"> 
-<button onclick="photoByNumber()">Submit</button>
+<button onclick="updateImages()">Submit</button>
 </div>
 
-<div id="photoDisplay">
-<img id="photoImg">
-</div>
+<div id="react"></div>
 
 </main>
 
 <!-- The Javascript for this page -->
+<script src="https://unpkg.com/react@15/dist/react.js"></script> 
+<script src="https://unpkg.com/react-dom@15/dist/react-dom.js"></script>
+<script src="prop-types.js"></script>
+<script src="react-photo-gallery.js"></script>
 <script src="testWHS2.js"> </script>
 
 </body>
