Resize works for images

--- a/server/public/testWHS2.html
+++ b/server/public/testWHS2.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> 
 </head>
 
-<body>
+<body onresize="updateImages()">
 
 <header>
 <h1>Testing PhotoQ</h1>
