Fixed some stuff

--- a/server/public/testWHS2.html
+++ b/server/public/testWHS2.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> 
 </head>
 
-<body onresize="updateImages()">
+<body>
 
 <header>
 <h1>Testing PhotoQ</h1>
@@ -25,9 +25,9 @@ Load a photo by number:
 <input id="num" placeholder="photo number"> 
 <button onclick="updateImages()">Submit</button>
 </div>
-
+<div id="react-container">
 <div id="react"></div>
-
+</div>
 </main>
 
 <!-- The Javascript for this page -->
