--- a/server/public/testWHS2.html
+++ b/server/public/testWHS2.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" type="text/css" href="http://web.cs.ucdavis.edu/~amenta/s18/reset.css">
 <link rel="stylesheet" type="text/css" href="testWHS2.css">
-<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
@@ -20,7 +20,7 @@
 
 <main>
 <div id="query">
-<input id="num" placeholder="photo number">
+<input id="num">
     <button onclick="updateImages()"  class="material-icons">search </button> 
 </div>
 </div>
