--- a/server/public/testWHS2.html
+++ b/server/public/testWHS2.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body>
+<body onresize="resize()">
 <div id="top">
 <header>
 <h1>PHOTOQ</h1>
