Working on reading from table

--- a/server/public/testWHS2.html
+++ b/server/public/testWHS2.html
@@ -20,7 +20,7 @@
 
 <main>
 <div id="query">
-<input id="key" onkeydown="checkInput()">
+<input id="key" onkeyup="checkInput()">
     <button onclick="updateImages()"  class="material-icons">search </button> 
 </div>
 </div>
