Got popup menu to work

--- a/server/public/testWHS2.html
+++ b/server/public/testWHS2.html
@@ -19,10 +19,13 @@
 
 
 <main>
-<div id="query">
-<input id="key" onkeyup="checkInput()">
-    <button onclick="updateImages()"  class="material-icons">search </button> 
-</div>
+<div id="header">
+    <div id="query">
+        <input id="key" onkeyup="checkInput()">
+        <button onclick="updateImages()"  class="material-icons">search </button> 
+        </div>
+    <div id="reactPop"></div>
+    </div>
 </div>
 <div id="react-container">
 <p id="noitems"> Nothing's been searched yet!<br><br>&emsp;&emsp;Use the search above</p>
